feat: check and add promotions before add, update Order or Appointment